fix the docs
